Sticker Modal: Ensure that very long author is truncated

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -6124,6 +6124,8 @@ button.module-image__border-overlay:focus {
         flex-direction: column;
         justify-content: center;
         flex-grow: 1;
+        flex-shrink: 1;
+        overflow: hidden;
 
         &__title {
           margin: 0;
